portefaix-policies-0.7.0/kyverno/P0003-pod-host-network/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok-1
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok-2
spec:
  hostNetwork: false
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: nginx
