portefaix-policies-0.7.0/kyverno/P0003-pod-host-network/policy-P0003.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-P0003
  annotations:
    policies.kyverno.io/title: Pod must run without access to the host networking
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Sharing the host’s network namespace permits processes in the pod to
      communicate with processes bound to the host’s loopback adapter
spec:
  validationFailureAction: audit
  rules:
    - name: validate-host-network
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pod must run without access to the host networking"
        pattern:
          spec:
            =(hostNetwork): "false"
